--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,23 @@ services:
       CLUSTER_HOSTNAME: 'node1'
     volumes:
       - weaviate_data:/var/lib/weaviate
+  fastapi:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    depends_on:
+      - weaviate
+    environment:
+      - WEAVIATE_URL=http://weaviate:8080
+      - WEAVIATE_API_KEY=
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: uvicorn api.api_main:app --host 0.0.0.0 --port 8000
+    restart: on-failure:0
+    env_file:
+      - .env
 volumes:
   weaviate_data:
