--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,8 @@ pandas
 numpy
 openpyxl
 sentence-transformers
-torch
 scikit-learn
-weaviate-client
+weaviate-client>=3.26.7,<4.0.0
 requests
 python-dotenv
 tqdm
